Añadido todolo que faltaba del proyecto para entrega

--- a/src/api/Pipfile
+++ b/src/api/Pipfile
@@ -13,6 +13,8 @@ flask-mail = "*"
 flask-migrate = "*"
 alembic = "*"
 flask-bcrypt = "*"
+flask-session = "*"
+cloudinary = "*"
 
 [dev-packages]
 
