--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "tw-elements": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
