--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
-    "@material-tailwind/react": "^2.1.9",
     "autoprefixer": "^10.4.19",
     "jwt-decode": "^4.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.3",
-    "tw-elements": "^2.0.0"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
