--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.23.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
